# esp32_aquaculture_monitor

./: README.md
host_panel/design/: panel.sll  panel.spj  panel_events.py
host_panel/src/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
host_panel/src/main/: CMakeLists.txt  Kconfig  Kconfig.projbuild  bsp_board.c  bsp_board.h  idf_component.yml  main.c
host_panel/src/main/app_sr/: CMakeLists.txt  app_sr.c  app_sr.h
host_panel/src/main/https_mbedtls/: CMakeLists.txt  https_mbedtls.c  https_mbedtls.h
host_panel/src/main/ui/: CMakeLists.txt  README.md  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
host_panel/src/main/ui/images/: ui_img_1608143951.c  ui_img_906722072.c  ui_img_camera_png.c  ui_img_feeding_png.c  ui_img_nth_png.c  ui_img_ph_png.c  ui_img_pump_png.c  ui_img_refresh_png.c  ui_img_tds_png.c  ui_img_water_level_png.c  ui_img_water_temperature_png.c  ui_img_wifi_png.c
host_panel/src/main/ui/screens/: ui_Camera.c  ui_Main_Screen.c  ui_QR_Code.c
sensor_hub/: sensor_hub.ino
slave_hub/: CMakeLists.txt  sdkconfig.default
slave_hub/main/: CMakeLists.txt  Kconfig.projbuild  camera_pin.h  slave_sensor.c
slave_hub_arduino_deprecated/: camera_pin.h  slave_hub.ino
